# rinha-backend-26-zero

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  docker-compose.yml  info.json
.github/workflows/: bench.yml  build.yml
.superset/: config.json
crates/zero-convert/: Cargo.toml
crates/zero-convert/src/: main.rs
crates/zero-gate/: Cargo.toml
crates/zero-gate/src/: main.rs
crates/zero-index/: Cargo.toml
crates/zero-index/src/: format.rs  lib.rs  normalize.rs  quant.rs  search.rs
crates/zero-server/: Cargo.toml
crates/zero-server/src/: fdpass.rs  hardening.rs  http.rs  lb.rs  lb_uring.rs  main.rs  worker.rs  worker_epoll.rs  worker_uring.rs
deploy/: Dockerfile  docker-compose.uring.yml  docker-compose.yml
test/: k6-script.js  ready-probe.js  req0.json  results.json  rinha-official.js
tools/: provision-box.md
